# discord-bot

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  client.rs  config.rs  main.rs  requests.rs
src/client/: base.rs  commands.rs  data.rs
src/plugins/: runtime.rs
src/utils/: env.rs  logger.rs
wit/: plugin.wit
