[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[features]
dotenv = ["dep:dotenvy"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
poise = "0.6"
reqwest = { version = "0.12.19", features = ["rustls-tls"] }
serde = "1"
serde_json = "1"
serde_yaml_ng = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
wasmtime = "33"
wasmtime-wasi = "33"
wasmtime-wasi-http = "33"

dotenvy = { version = "0.15", optional = true }
